interface CConvertToken extends ConvertToken{
	public String convert();
}