interface ConvertToken{
	public String convert();
}