interface FConvertToken extends ConvertToken{
	public String convert();
}