interface PConvertToken extends ConvertToken{
	public String convert();
}