public class TexCConvertToken implements CConvertToken{
	public String convert(){
		return("c");
	}
}