public class TexFConvertToken implements FConvertToken{
	public String convert(){
		return("_");
	}
}