public class TexPConvertToken implements PConvertToken{
	public String convert(){
		return("|");
	}
}