public class WidgetCConvertToken implements CConvertToken{
	public String convert(){
		return("<Char>");
	}
}