public class WidgetFConvertToken implements FConvertToken{
	public String convert(){
		return("<Font>");
	}
}