public class WidgetPConvertToken implements PConvertToken{
	public String convert(){
		return("<Paragraph>");
	}
}