public class WidgetText extends TextFormat
{
	WidgetText(){
		super();
	}
}